chore: chat front end